CHANGES
=======

0.1b9 (unreleased)
------------------

- Drop support for Python 2.5, 2.6.


0.1b8 (2014-11-03)
------------------

- hwp5view: experimental viewer with webkitgtk+
- hwp5proc: xml --formats ("flat", "nested")
- hwp5proc: models --events (experimental)
- hwp5proc: models --seqno --format (incompatible changes)
- hwp5proc: find --from-stdin
- hwp5proc: find --format
- binmodels: GShapeObjectCaption
- olestorage: Gsf implementation through python-gi
- olestorage: use new olefile instead of OleFileIO_PL


0.1b7 (2014-01-31)
------------------

- support distribution docs. (based on `Changwoo Ryu's algorithm <https://groups.google.com/forum/#!topic/hwp-foss/d2KL2ypR89Q>`_)

0.1b6 (2014-01-20)
------------------

- binmodel: change type of TableCell dimensions to signed integer
- hwp5odt: fix NCName for style:name (close #140)
- hwp5proc: fix with-statement in 'xml' command for Python 2.5
- hwp5proc: mark 'xml' command experimental

0.1b5 (2013-10-29)
------------------

- close #134
- hwp5html generates .xhtml instead of .html
- hwp5proc: new '--no-xml-decl' option
- hwp5odt: fix to not use '/' in resulting style names
- hwp5proc: IdMappings.memoshape only if version > 5.0.1.6

0.1b4 (2013-07-03)
------------------

- hwp5proc records: new option '--raw-header'
- hwp5odt: new '--document' option produces single ODT XML files (``*.fodt``)
- hwp5odt: new '--styles', '--content' option produces styles/content XML files
- ODT XSL files restructured

0.1b3 (2013-06-18)
------------------

- Fix IdMappings (#125)
- hwp5proc records: new option '--raw-payload'
- hwp5proc xml: FlagsType as xsd:hexBinary
- Various binary/xml models changes

0.1b2 (2013-06-08)
------------------

- Add PyPy support