@@ -26,12 +26,52 @@ from ..utils import cached_property
 
 def is_enabled():
     try:
-        import OleFileIO_PL
+        import olefile  # noqa
     except Exception:
-        return False
+        pass
     else:
-        OleFileIO_PL
         return True
+
+    try:
+        import OleFileIO_PL  # noqa
+    except ImportError:
+        pass
+    else:
+        return True
+
+    return False
+
+
+def import_isOleFile():
+    try:
+        from olefile import isOleFile
+    except ImportError:
+        pass
+    else:
+        return isOleFile
+
+    try:
+        from OleFileIO_PL import isOleFile
+    except ImportError:
+        pass
+    else:
+        return isOleFile
+
+
+def import_OleFileIO():
+    try:
+        from olefile import OleFileIO
+    except ImportError:
+        pass
+    else:
+        return OleFileIO
+
+    try:
+        from OleFileIO_PL import OleFileIO
+    except ImportError:
+        pass
+    else:
+        return OleFileIO
 
 
 class OleStorageItem(object):
@@ -66,11 +106,12 @@ class OleStorage(OleStorageItem):
 
     def __init__(self, olefile, path='', parent=None):
         if not hasattr(olefile, 'openstream'):
-            from OleFileIO_PL import isOleFile
+            isOleFile = import_isOleFile()
+            OleFileIO = import_OleFileIO()
+
             if not isOleFile(olefile):
                 errormsg = 'Not an OLE2 Compound Binary File.'
                 raise InvalidOleStorageError(errormsg)
-            from OleFileIO_PL import OleFileIO
             olefile = OleFileIO(olefile)
         OleStorageItem.__init__(self, olefile, path, parent)
 
