@@ -5,6 +5,7 @@ CHANGES
 ------------------
 
 - Drop support for Python 2.5, 2.6.
+- Prefer 'olefile' to 'OleFileIO_PL'.
 
 
 0.1b8 (2014-11-03)
